Fix alignment of the last items in the registration steps

--- a/src/styles/trumps/_sign.scss
+++ b/src/styles/trumps/_sign.scss
@@ -45,6 +45,7 @@
       display: flex;
       flex-direction: column;
       height: 100%;
+      max-height: 560px;
     }
     h3 {
       font-size: 24px;
@@ -216,6 +217,17 @@
     line-height: 54px;
     padding-top: 0;
     padding-bottom: 0;
+  }
+  [name="new-project"] {
+    display: flex;
+    height: 100%;
+    flex-direction: column;
+    fieldset {
+      margin-bottom: 30px;
+    }
+    .form-actions {
+      margin-top: auto;
+    }
   }
 }
 .password-reset {
